# letmein

./: .gitignore  README.md  build.gradle  settings.gradle  todo
RaspberryPi/Project/: CMakeLists.txt  Camera.cpp  Camera.h  Fingerprint.cpp  Fingerprint.h  main.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: check_circle.xml  check_circle_outline.xml  dots_vertical.xml  fingerprint.xml  round_button.xml  window_minimize.xml
app/src/main/res/layout/: activity_add_member.xml  activity_administration_member_card.xml  activity_alternate_register.xml  activity_day_entries_card.xml  activity_entry_card.xml  activity_entry_history.xml  activity_entry_history_entry_card.xml  activity_history_entry_card.xml  activity_lock.xml  activity_main.xml  activity_member_administration_member_card.xml  activity_member_card.xml  activity_member_item.xml  activity_members_administration.xml  activity_register.xml  activity_visit_card.xml  app_bar_navigation_drawer.xml  card_entry_item.xml  card_member_item.xml  card_visit_item.xml  card_visit_item_home.xml  fragment_add_member.xml  fragment_administration.xml  fragment_feedback.xml  fragment_history.xml  fragment_home.xml  fragment_live.xml  fragment_member_profile.xml  fragment_promotion.xml  fragment_settings.xml  fragment_view_member.xml  image_gallery_item.xml  nav_header_navigation_drawer.xml  toolbar.xml
app/src/main/res/menu/: activity_navigation_drawer_drawer.xml  alternate_register_menu.xml  navigation_menu.xml  promotion_menu.xml  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
(+182 files in other folders)
